--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
+    <link
+      href="https://unpkg.com/slim-select@latest/dist/slimselect.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
-    <select class="breed-select"></select>
-    <!-- <p class="loader">Loading data, please wait...</p>
+    <div class="container">
+      <select class="breed-select"></select>
+      <!-- <p class="loader">Loading data, please wait...</p>
     <p class="error">Oops! Something went wrong! Try reloading the page!</p> -->
-    <div class="cat-info"></div>
-
+      <div class="cat-info">
+        <!-- <div class="left-col">
+          <img src="" alt="" /> 
+        </div>  -->
+        <!-- <div class="right-col">
+          <h1>Lorem ipsum!</h1>
+          <p><strong>Temperament:</strong></p>
+          <p><strong>Description:</strong></p>
+        </div> -->
+      </div>
+      <div class="wrapper-loader is-hidden"><span class="loader"></span></div>
+    </div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
